# Mnemosynth-04

./: Dockerfile  README.md  list_installed_versions.py  pyproject.toml  requirements.txt
src/: mnemosynth.py
src/Assets/: Initial_Prompt.txt  Personality.txt  Voice_Ref_Trans.txt
src/Assets/RAG/chroma_db/: chroma.sqlite3
src/Assets/RAG/chroma_db/9b80662e-d61e-4e84-9344-833997e38eb8/: index_metadata.pickle
src/F5_TTS_Files/: __init__.py
src/f5_tts/: api.py  socket_server.py
src/f5_tts/eval/: eval_infer_batch.py  utils_eval.py
src/f5_tts/infer/: infer_gradio.py  mnemosynth.py  utils_infer.py
src/f5_tts/infer/Assets/: Personality.txt
src/f5_tts/infer/Assets/RAG/chroma_db/: chroma.sqlite3
src/f5_tts/infer/F5_TTS_Files/: cfm.py  dit.py  unett.py
src/f5_tts/model/: __init__.py
src/f5_tts/train/: finetune_gradio.py  train.py
